# pp-final-bigint-mul

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  plot.py
benchmarks/: bench_main.cpp
data/: data.tar
include/: bigint.hpp  cli.hpp  common.hpp  modint.hpp  registry.hpp
karatsuba/: Makefile
native/: Makefile
native/include/: multiply.hpp
native/src/: multiply.cpp  native.cpp
scripts/: ans.py  generate.py  stick_long.py  stick_ntt.py  test.sh
src/: bigint.cpp  cli.cpp  registry.cpp
src/cpu/: fft-simd.cpp  fft.cpp  long-omp.cpp  long-simd.cpp  long-thread-simd.cpp  long-thread.cpp  long.cpp  ntt-base.cpp  ntt-omp-old.cpp  ntt-omp.cpp  ntt-omp2.cpp  ntt-thread-2.cpp  ntt-thread-old.cpp  ntt-thread.cpp  ntt.cpp  schoolbook.cpp  schoolbook_thread.cpp
src/gpu/: ntt-gpu.cu  schoolbook.cu  schoolbook_optimized.cu
utils/include/: bigint.hpp  pch.hpp
utils/src/: bigint.cpp
